@@ -11,7 +11,9 @@ def PROD   = "prod"
 
 final String URL_PROD = "https://maven.pkg.github.com/etendosoftware/com.etendoerp.gradleplugin"
 final String URL_DEV = "https://repo.futit.cloud/repository/maven-public-snapshots"
-final String PLUGIN_VERSION = "1.5.3"
+final String PLUGIN_VERSION = "2.0.0"
+final String PUBLICATION_TYPE = "-rc"
+
 // Default mode
 def mode = DEV
 
@@ -36,7 +38,7 @@ if (mode == DEV) {
 
 def urlToPublish = (mode == PROD) ? URL_PROD : URL_DEV
 
-group 'com.etendoerp'
+group = 'com.etendoerp'
 version(pluginVersion)
 
 repositories {
@@ -44,15 +46,22 @@ repositories {
 }
 
 publishing {
+    publications {
+        pluginMaven(MavenPublication) {
+            groupId = group
+            version = pluginVersion
+            artifactId = 'gradleplugin' + PUBLICATION_TYPE
+        }
+    }
     repositories {
         maven {
             credentials {
                 if (mode == PROD) {
-                    username "$githubUser"
-                    password "$githubToken"
+                    username = "$githubUser"
+                    password = "$githubToken"
                 } else {
-                    username "$nexusUser"
-                    password "$nexusPassword"
+                    username = "$nexusUser"
+                    password = "$nexusPassword"
                 }
             }
             url(urlToPublish)
@@ -83,7 +92,7 @@ dependencies {
         exclude group: 'jdom', module: 'jdom'
     }
 
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.9'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.22'
     testImplementation platform("org.spockframework:spock-bom:2.0-M4-groovy-3.0")
     testImplementation 'org.spockframework:spock-core'
     testImplementation 'org.spockframework:spock-junit4'
@@ -104,13 +113,13 @@ test {
     systemProperty 'com.athaydes.spockframework.report.showCodeBlocks', true
     systemProperty 'nexusUser', project.hasProperty('nexusUser') ? project.nexusUser : System.getenv("NEXUS_USR")
     systemProperty 'nexusPassword', project.hasProperty('nexusPassword') ? project.nexusPassword : System.getenv("NEXUS_PSW")
-    systemProperty 'test.bbdd.sid', project['test.bbdd.sid']
-    systemProperty 'test.bbdd.systemUser', project['test.bbdd.systemUser']
-    systemProperty 'test.bbdd.systemPassword', project['test.bbdd.systemPassword']
-    systemProperty 'test.bbdd.user', project['test.bbdd.systemUser']
-    systemProperty 'test.bbdd.password', project['test.bbdd.systemPassword']
-    systemProperty 'test.bbdd.url', project['test.bbdd.url']
-    systemProperty 'org.gradle.jvmargs', '-Xmx2g -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8'
+    systemProperty 'test.bbdd.sid', project.hasProperty('test.bbdd.sid') ? project['test.bbdd.sid'] : ''
+    systemProperty 'test.bbdd.systemUser', project.hasProperty('test.bbdd.systemUser') ? project['test.bbdd.systemUser'] : ''
+    systemProperty 'test.bbdd.systemPassword', project.hasProperty('test.bbdd.systemPassword') ? project['test.bbdd.systemPassword'] : ''
+    systemProperty 'test.bbdd.user', project.hasProperty('test.bbdd.systemUser') ? project['test.bbdd.systemUser'] : ''
+    systemProperty 'test.bbdd.password', project.hasProperty('test.bbdd.systemPassword') ? project['test.bbdd.systemPassword'] : ''
+    systemProperty 'test.bbdd.url', project.hasProperty('test.bbdd.url') ? project['test.bbdd.url'] : ''
+    systemProperty 'org.gradle.jvmargs', '-Dfile.encoding=UTF-8'
     environment 'JAVA_HOME', System.getenv('JAVA_HOME')
 
     maxHeapSize = "2048m"
@@ -164,7 +173,7 @@ task upgradePluginVersion() {
 gradlePlugin {
     plugins {
         etendoPlugin {
-            id = "com.etendoerp.gradleplugin"
+            id = "com.etendoerp.gradleplugin" + PUBLICATION_TYPE
             implementationClass = "com.etendoerp.EtendoPlugin"
         }
     }
